# QCAS

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: CodeCoverage.cmake
doc/: Doxyfile.in
example/: example.cpp
include/QCAS/: QCAS.h
src/: QCAS.cpp
tests/: QCASTest.cpp.in
